--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,3 +1,96 @@
+
 * {
-    background-color: gray;
+    box-sizing: border-box;
+    border: 1px solid red;
+}
+
+body {
+    background-image: url(https://images.pexels.com/photos/259915/pexels-photo-259915.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+}
+
+.container {
+    height: 960px;
+    max-width: 1460px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: auto auto 1fr auto;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+
+    grid-template-areas:    "header header header"
+                            "nav nav nav"
+                            "section1 section1 section1"
+                            "footer footer footer";
+}
+
+header {
+    width: 100%;
+    grid-area: header;
+    color: white;
+    background-color: red;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Generic_banner_city_lights.jpg/1198px-Generic_banner_city_lights.jpg);
+    padding: 5px;
+}
+nav {
+    background-color: khaki;
+    grid-area: nav;
+
+}
+
+section {
+    background-color: green;
+    padding: 5px;
+}
+aside {
+    background-color: blueviolet;
+    padding: 5px;
+    
+
+}
+footer {
+    background-color: magenta;
+    padding: 5px;
+    grid-area: footer;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    padding: 5px;
+}
+
+nav li {
+    float: left;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #111;
+}
+
+.s1 {
+    grid-area: section1;
+}
+.s2 {
+    grid-area: section2;
+
+}
+.s3 {
+    grid-area: section3;
+
+}
+.s4 {
+    grid-area: section4;
+
 }
