--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
     max-width: 1460px;
     margin: 0 auto;
     display: grid;
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: minmax();
     grid-template-columns: 1fr 1fr 1fr;
     grid-row-gap: 5px;
     grid-column-gap: 5px;
