--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
 * {
     box-sizing: border-box;
     border: 1px solid red;
+    
 }
 
 body {
-    background-image: url(https://images.pexels.com/photos/259915/pexels-photo-259915.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
+    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
 }
 
 .container {
