--- a/css/style.css
+++ b/css/style.css
@@ -6,17 +6,16 @@
 }
 
 body {
-    background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
 }
 
 .container {
-    height: 1000px;
-    max-width: 900px;
+    height: auto;
+    max-width: 1200px;
     margin: 0 auto;
     display: grid;
     grid-template-rows: auto auto 1fr auto;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-row-gap: 5px;
     grid-column-gap: 5px;
 
     grid-template-areas:    "header header header"
