--- a/css/style.css
+++ b/css/style.css
@@ -1,96 +1,128 @@
-
 * {
-    box-sizing: border-box;
-    border: 1px solid red;
-    
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
-    background-image: linear-gradient(to right, #ff8177 0%, #ff867a 0%, #ff8c7f 21%, #f99185 52%, #cf556c 78%, #b12a5b 100%);
-}
-
-.container {
-    height: auto;
-    max-width: 1200px;
-    margin: 0 auto;
-    display: grid;
-    grid-template-rows: auto auto 1fr auto;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap: 5px;
-
-    grid-template-areas:    "header header header"
-                            "nav nav nav"
-                            "section1 section1 section1"
-                            "footer footer footer";
+  background-color: orange;
 }
 
 header {
-    width: 100%;
-    grid-area: header;
-    color: white;
-    background-color: red;
-    background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Generic_banner_city_lights.jpg/1198px-Generic_banner_city_lights.jpg);
-    padding: 5px;
+  width: 100%;
+  grid-area: header;
+  color: white;
+  background-color: red;
+  background-image: lightorange;
+  padding: 5px;
 }
-nav {
-    background-color: khaki;
-    grid-area: nav;
 
+nav {
+  background-color: khaki;
+  grid-area: nav;
 }
 
 section {
-    background-color: green;
-    padding: 5px;
+  background-color: green;
+  padding: 5px;
 }
-aside {
-    background-color: blueviolet;
-    padding: 5px;
-    
 
+aside {
+  background-color: lightblue;
+  padding: 5px;
 }
+
 footer {
-    background-color: magenta;
-    padding: 5px;
-    grid-area: footer;
+  background-color: magenta;
+  padding: 5px;
+  grid-area: footer;
 }
 
 nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-    padding: 5px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: orange;
+  padding: 5px;
 }
-
 nav li {
-    float: left;
+  float: left;
 }
-
 nav li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
-
 nav li a:hover {
-    background-color: #111;
+  background-color: #555;
+  color: white;
 }
 
 .s1 {
-    grid-area: section1;
+  grid-area: section1;
 }
-.s2 {
-    grid-area: section2;
 
+.container {
+  height: auto;
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
+  grid-template-rows: minmax(min-content, max-content);
+  grid-template-columns: 1fr;
+  grid-template-areas: "header" "nav" "section1" "footer";
 }
-.s3 {
-    grid-area: section3;
 
+@media only screen and (max-width: 600px) {
+  body {
+    margin: 0;
+    width: 100%;
+  }
 }
-.s4 {
-    grid-area: section4;
+@media only screen and (min-width: 600px) {
+  .container {
+    height: auto;
+    max-width: 1000px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
+    grid-template-rows: minmax(min-content, max-content);
+    grid-template-columns: 1fr 5fr;
+    grid-template-areas: "header header" "nav section1" "footer footer";
+  }
+  .container nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #orange;
+    width: 100%;
+    height: 100%;
+  }
+  .container nav li {
+    width: 100%;
+  }
+  .container nav li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  .container nav li a:hover {
+    background-color: #555;
+    color: white;
+  }
+}
+@media only screen and (min-width: 1200px) {
+  .container {
+    height: auto;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr 5fr;
+    grid-gap: 5px;
+    grid-template-areas: "header header" "nav section1" "footer footer";
+  }
+}
 
-}
+/*# sourceMappingURL=style.css.map */
