--- a/css/style.sass
+++ b/css/style.sass
@@ -14,6 +14,11 @@ header
     background-image: lightorange
     padding: 5px
 
+    h1
+        a
+            color: black
+            text-decoration: none
+
 nav
     background-color: khaki
     grid-area: nav
