--- a/css/style.sass
+++ b/css/style.sass
@@ -9,19 +9,26 @@ body
 header
     width: 100%
     grid-area: header
+    display: grid
+    grid-template-columns: 1fr 3fr 1fr
+    grid-template-rows: 100px
+    grid-template-areas: "logo nav login"
     color: white
     background-color: red
     background-image: lightorange
     padding: 5px
 
     h1
+        grid-area: logo
         a
             color: black
             text-decoration: none
 
-nav
-    background-color: khaki
-    grid-area: nav
+    nav
+        background-color: khaki
+        grid-area: nav
+    aside
+        grid-area: login
 
 section
     background-color: green
@@ -67,7 +74,7 @@ nav
     display: grid
     grid-template-rows: minmax(min-content, max-content)
     grid-template-columns: 1fr
-    grid-template-areas:    "header""nav""section1""footer"
+    grid-template-areas:    "header""section1""footer"
 
 @media only screen and (max-width : 600px)
     body 
@@ -79,35 +86,8 @@ nav
         height: auto
         max-width: 1000px
         margin: 0 auto
-        display: grid
-        grid-template-rows: minmax(min-content, max-content)
-        grid-template-columns: 1fr 5fr  
-        grid-template-areas:    "header header""nav section1""footer footer"
-        nav
-            ul
-                list-style-type: none
-                margin: 0
-                padding: 0
-                background-color: #orange
-                width: 100%
-                height: 100%
-            li
-                width: 100%
-                a
-                    display: block
-                    color: #000
-                    padding: 8px 16px
-                    text-decoration: none
-                a:hover
-                    background-color: #555
-                    color: white
 
 @media only screen and (min-width : 1200px)
     .container
         height: auto
         margin: 0 auto
-        display: grid
-        grid-template-rows: auto
-        grid-template-columns:  1fr 5fr
-        grid-gap: 5px
-        grid-template-areas:    "header header""nav section1""footer footer"
