--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ header h1 {
 header h1 a {
   color: black;
   text-decoration: none;
+  font-size: 20px;
 }
 header nav {
   background-color: khaki;
