--- a/css/style.sass
+++ b/css/style.sass
@@ -23,6 +23,7 @@ header
         a
             color: black
             text-decoration: none
+            font-size: 20px
 
     nav
         background-color: khaki
