--- a/css/style.sass
+++ b/css/style.sass
@@ -47,6 +47,7 @@ footer
 nav
     ul
         list-style-type: none
+        height: 100%
         margin: 0
         padding: 0
         overflow: hidden
