Auto stash before rebase of "origin/nippe"

--- a/css/style.sass
+++ b/css/style.sass
@@ -30,7 +30,9 @@ header
         grid-area: nav
     aside
         grid-area: login
-
+    img 
+        max-height:100px;
+        max-width: 100px;
 section
     background-color: green
     padding: 5px
