--- a/css/style.sass
+++ b/css/style.sass
@@ -3,8 +3,8 @@
     box-sizing: border-box
 
 body
-    background-color: orange
-
+    background-image: url("http://localhost/project_1/app/images/bgimg.jpg")
+    background-size: 100%
 
 header
     width: 100%
@@ -14,8 +14,6 @@ header
     grid-template-rows: 100px
     grid-template-areas: "logo nav login"
     color: white
-    background-color: red
-    background-image: lightorange
     padding: 5px
 
     h1
@@ -26,19 +24,16 @@ header
             font-size: 20px
 
     nav
-        background-color: khaki
         grid-area: nav
     aside
         grid-area: login
     img 
-        max-height:100px;
-        max-width: 100px;
+        max-height: 100px
+        max-width: 100px
 section
-    background-color: green
     padding: 5px
 
 aside
-    background-color: lightblue
     padding: 5px
 
 footer
@@ -53,7 +48,6 @@ nav
         margin: 0
         padding: 0
         overflow: hidden
-        background-color: orange
         padding: 5px
     li
         float: left
@@ -70,8 +64,10 @@ nav
 
 .s1
     grid-area: section1
+    
 
 .container
+    
     height: auto
     width: 100%
     margin: 0 auto
