--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,8 @@
 }
 
 body {
-  background-color: orange;
+  background-image: url("http://localhost/project_1/app/images/bgimg.jpg");
+  background-size: 100%;
 }
 
 header {
@@ -15,8 +16,6 @@ header {
   grid-template-rows: 100px;
   grid-template-areas: "logo nav login";
   color: white;
-  background-color: red;
-  background-image: lightorange;
   padding: 5px;
 }
 header h1 {
@@ -28,20 +27,21 @@ header h1 a {
   font-size: 20px;
 }
 header nav {
-  background-color: khaki;
   grid-area: nav;
 }
 header aside {
   grid-area: login;
 }
+header img {
+  max-height: 100px;
+  max-width: 100px;
+}
 
 section {
-  background-color: green;
   padding: 5px;
 }
 
 aside {
-  background-color: lightblue;
   padding: 5px;
 }
 
@@ -57,7 +57,6 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: orange;
   padding: 5px;
 }
 nav li {
