--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
+  box-sizing: border-box; }
 
 body {
   background-image: url("http://localhost/project_1/app/images/bgimg.jpg");
@@ -48,8 +46,7 @@ aside {
 footer {
   background-color: magenta;
   padding: 5px;
-  grid-area: footer;
-}
+  grid-area: footer; }
 
 nav ul {
   list-style-type: none;
@@ -60,52 +57,40 @@ nav ul {
   padding: 5px;
 }
 nav li {
-  float: left;
-}
+  float: left; }
 nav li a {
   display: block;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
-}
+  text-decoration: none; }
 nav li a:hover {
   background-color: #555;
-  color: white;
-}
+  color: white; }
 
 .s1 {
-  grid-area: section1;
-}
+  grid-area: section1; }
 
 .container {
   height: auto;
   width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
   grid-template-rows: minmax(min-content, max-content);
   grid-template-columns: 1fr;
-  grid-template-areas: "header" "section1" "footer";
-}
+  grid-template-areas: "header" "section1" "footer"; }
 
 @media only screen and (max-width: 600px) {
   body {
     margin: 0;
-    width: 100%;
-  }
-}
+    width: 100%; } }
 @media only screen and (min-width: 600px) {
   .container {
     height: auto;
     max-width: 1000px;
-    margin: 0 auto;
-  }
-}
+    margin: 0 auto; } }
 @media only screen and (min-width: 1200px) {
   .container {
     height: auto;
-    margin: 0 auto;
-  }
-}
+    margin: 0 auto; } }
 
 /*# sourceMappingURL=style.css.map */
