--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
-  color: white;
-  border: 1px solid red; }
+  color: white; }
 
 body {
   background-image: url("http://localhost/project_1/app/images/background.jpg");
@@ -33,7 +32,10 @@ header {
 section {
   height: 700px;
   padding: 5px;
-  text-color: white; }
+  text-color: white;
+  text-align: center; }
+  section h1 {
+    font-size: 100px; }
 
 aside {
   padding: 5px; }
