--- a/css/style.sass
+++ b/css/style.sass
@@ -2,7 +2,7 @@
 *
     box-sizing: border-box
     color: white
-    border: 1px solid red
+
 
 body
     background-image: url("http://localhost/project_1/app/images/background.jpg")
@@ -36,7 +36,10 @@ section
     height: 700px
     padding: 5px
     text-color: white
+    text-align: center
 
+    h1
+        font-size: 100px
 aside
     padding: 5px
 
