--- a/css/style.sass
+++ b/css/style.sass
@@ -2,7 +2,6 @@
 *
     box-sizing: border-box
     color: white
-    border: 1px solid red
 
 body
     background-image: url("http://localhost/project_1/app/images/background.jpg")
@@ -33,9 +32,13 @@ header
         max-height: 200px
         max-width: 200px
 section
-    height: 700px
+    height: 650px
     padding: 5px
     text-color: white
+
+    h1  
+        text-align: center
+        font-size: 100px
 
 aside
     padding: 5px
