--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 * {
   box-sizing: border-box;
-  color: white;
-  border: 1px solid red; }
+  color: white; }
 
 body {
   background-image: url("http://localhost/project_1/app/images/background.jpg");
@@ -31,9 +30,12 @@ header {
     max-width: 200px; }
 
 section {
-  height: 700px;
+  height: 650px;
   padding: 5px;
   text-color: white; }
+  section h1 {
+    text-align: center;
+    font-size: 100px; }
 
 aside {
   padding: 5px; }
