--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,13 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: white;
-  border: 1px solid red; }
+  border: 1px solid red;
+}
 
 body {
   background-image: url("http://localhost/project_1/app/images/background.jpg");
-  background-size: 100%; }
+  background-size: 100%;
+}
 
 header {
   width: 100%;
@@ -16,28 +18,36 @@ header {
   grid-template-rows: 200px;
   grid-template-areas: "logo nav login";
   color: white;
-  padding: 5px; }
-  header h1 {
-    grid-area: logo; }
-    header h1 a {
-      color: white;
-      text-decoration: none;
-      font-size: 20px; }
-  header nav {
-    grid-area: nav; }
-  header aside {
-    grid-area: login; }
-  header img {
-    max-height: 200px;
-    max-width: 200px; }
+  padding: 5px;
+}
+header h1 {
+  grid-area: logo;
+}
+header h1 a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+header nav {
+  grid-area: nav;
+}
+header aside {
+  grid-area: login;
+}
+header img {
+  max-height: 200px;
+  max-width: 200px;
+}
 
 section {
   height: 700px;
   padding: 5px;
-  text-color: white; }
+  text-color: white;
+}
 
 aside {
-  padding: 5px; }
+  padding: 5px;
+}
 
 footer {
   background-color: magenta;
@@ -51,7 +61,8 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  padding: 5px; }
+  padding: 5px;
+}
 nav li {
   float: left;
 }
