--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 * {
-  box-sizing: border-box;
-  color: white; }
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: white;
+}
 
 body {
   background-image: url("http://localhost/project_1/app/images/background.jpg");
-  background-size: 100%; }
+  background-size: 100%;
+}
 
 header {
   width: 100%;
@@ -14,36 +17,46 @@ header {
   grid-template-rows: 200px;
   grid-template-areas: "logo nav login";
   color: white;
-  padding: 5px; }
-  header h1 {
-    grid-area: logo; }
-    header h1 a {
-      color: white;
-      text-decoration: none;
-      font-size: 20px; }
-  header nav {
-    grid-area: nav; }
-  header aside {
-    grid-area: login; }
-  header img {
-    max-height: 200px;
-    max-width: 200px; }
+  padding: 5px;
+}
+header h1 {
+  grid-area: logo;
+}
+header h1 a {
+  color: white;
+  text-decoration: none;
+  font-size: 20px;
+}
+header nav {
+  grid-area: nav;
+}
+header aside {
+  grid-area: login;
+}
+header img {
+  max-height: 200px;
+  max-width: 200px;
+}
 
 section {
   height: 700px;
   padding: 5px;
   text-color: white;
-  text-align: center; }
-  section h1 {
-    font-size: 100px; }
+  text-align: center;
+}
+section h1 {
+  font-size: 100px;
+}
 
 aside {
-  padding: 5px; }
+  padding: 5px;
+}
 
 footer {
   background-color: magenta;
   padding: 5px;
-  grid-area: footer; }
+  grid-area: footer;
+}
 
 nav ul {
   list-style-type: none;
@@ -51,42 +64,53 @@ nav ul {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  padding: 5px; }
+  padding: 5px;
+}
 nav li {
-  float: left; }
+  float: left;
+}
 nav li a {
   display: block;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none; }
+  text-decoration: none;
+}
 nav li a:hover {
   background-color: #555;
-  color: white; }
+  color: white;
+}
 
 .s1 {
-  grid-area: section1; }
+  grid-area: section1;
+}
 
 .container {
   height: auto;
   width: 100%;
   margin: 0 auto;
   display: grid;
+  grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
   grid-template-rows: minmax(min-content, max-content);
   grid-template-columns: 1fr;
-  grid-template-areas: "header" "section1" "footer"; }
+  grid-template-areas: "header" "section1" "footer";
+}
 
 @media only screen and (max-width: 600px) {
   body {
     margin: 0;
-    width: 100%; } }
+    width: 100%;
+  }
+}
 @media only screen and (min-width: 600px) {
   .container {
     height: auto;
     max-width: 1000px;
-    margin: 0 auto; } }
+    margin: 0 auto;
+  }
+}
 @media only screen and (min-width: 1200px) {
   .container {
     height: auto;
-    margin: 0 auto; } }
-
-/*# sourceMappingURL=style.css.map */
+    margin: 0 auto;
+  }
+}
