--- a/css/style.sass
+++ b/css/style.sass
@@ -16,6 +16,7 @@ header
     grid-template-areas: "logo nav login"
     color: white
     padding: 5px
+    background-color: orange
 
     h1
         grid-area: logo
@@ -26,6 +27,7 @@ header
 
     nav
         grid-area: nav
+        font-size: 25px
     aside
         grid-area: login
     img 
@@ -34,11 +36,23 @@ header
 section
     height: 650px
     padding: 5px
-    text-color: white
+    text-color: black
+    background-color: orange
 
     h1  
+        font-size: 80px
+
+    .motto
         text-align: center
         font-size: 100px
+
+.player
+    text-align: left
+    font-size: 25px
+
+    h1  
+        font-size: 60px
+    
 
 aside
     padding: 5px
