--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ header img {
 }
 
 section {
-  height: 650px;
+  min-height: 650px;
   padding: 5px;
   text-color: black;
   background-color: orange;
@@ -99,7 +99,7 @@ nav li a:hover {
 }
 
 .container {
-  height: auto;
+  height: 100%;
   width: 100%;
   margin: 0 auto;
   display: grid;
