--- a/css/style.sass
+++ b/css/style.sass
@@ -34,7 +34,7 @@ header
         max-height: 200px
         max-width: 200px
 section
-    height: 650px
+    min-height: 650px
     padding: 5px
     text-color: black
     background-color: orange
@@ -89,7 +89,7 @@ nav
 
 .container
     
-    height: auto
+    height: 100%
     width: 100%
     margin: 0 auto
     display: grid
