--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,14 @@ header img {
 section {
   min-height: 650px;
   padding: 5px;
-  text-color: white;
-  text-align: center;
+  text-color: black;
+  background-color: orange;
 }
 section h1 {
+  font-size: 80px;
+}
+section .motto {
+  text-align: center;
   font-size: 100px;
 }
 
