--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,3 @@
-<<<<<<< refs/remotes/origin/master
-/*
-Error: Invalid mixin "======".
-        on line 6 of C:\wamp64\www\project_1\css\style.sass
-
-1: 
-2: *
-3:     box-sizing: border-box
-4:     color: white
-5: <<<<<<< refs/remotes/origin/master
-6: =======
-7: 
-8: >>>>>>> vitun nastaa
-9: 
-10: body
-11:     background-image: url("http://localhost/project_1/app/images/background.jpg")
-
-Backtrace:
-C:\wamp64\www\project_1\css\style.sass:6
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:1127:in `parse_mixin_definition'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:659:in `parse_line'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:540:in `build_tree'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:559:in `block in append_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:558:in `each'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:558:in `append_children'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:417:in `_to_tree'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/engine.rb:290:in `render'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:400:in `run'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/sass_scss.rb:63:in `process_result'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:52:in `parse'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/lib/sass/exec/base.rb:19:in `parse!'
-C:/Program Files (x86)/Koala/rubygems/gems/sass-3.5.2/bin/sass:13:in `<top (required)>'
-C:/Program Files (x86)/Koala/bin/sass:22:in `load'
-C:/Program Files (x86)/Koala/bin/sass:22:in `<main>'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Invalid mixin \"======\".\A         on line 6 of C:\wamp64\www\project_1\css\style.sass\A \A 1: \A 2: *\A 3:     box-sizing: border-box\A 4:     color: white\A 5: <<<<<<< refs/remotes/origin/master\A 6: =======\A 7: \A 8: >>>>>>> vitun nastaa\A 9: \A 10: body\A 11:     background-image: url(\"http://localhost/project_1/app/images/background.jpg\")"; }
-=======
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -58,6 +18,7 @@ header {
   grid-template-areas: "logo nav login";
   color: white;
   padding: 5px;
+  background-color: orange;
 }
 header h1 {
   grid-area: logo;
@@ -69,6 +30,7 @@ header h1 a {
 }
 header nav {
   grid-area: nav;
+  font-size: 25px;
 }
 header aside {
   grid-area: login;
@@ -79,12 +41,27 @@ header img {
 }
 
 section {
-  height: 700px;
+  height: 650px;
   padding: 5px;
-  text-color: white;
-  text-align: center;
+  text-color: black;
+  background-color: orange;
 }
 section h1 {
+  font-size: 80px;
+}
+section .motto {
+  text-align: center;
+  font-size: 100px;
+}
+
+.player {
+  text-align: left;
+  font-size: 25px;
+}
+.player h1 {
+  font-size: 60px;
+}
+.player h1 {
   font-size: 100px;
 }
 
@@ -154,4 +131,3 @@ nav li a:hover {
     margin: 0 auto;
   }
 }
->>>>>>> ad
