--- a/css/style.sass
+++ b/css/style.sass
@@ -2,6 +2,7 @@
 *
     box-sizing: border-box
     color: white
+    border: 1px solid red
 
 
 body
@@ -17,7 +18,7 @@ header
     grid-template-areas: "logo nav login"
     color: white
     padding: 5px
-    background-color: orange
+    background-color: rgba(255, 165, 0, .7)
 
     h1
         grid-area: logo
@@ -33,12 +34,12 @@ header
         grid-area: login
     img 
         max-height: 200px
-        max-width: 200px
+        width: auto
 section
     min-height: 650px
     padding: 5px
     text-color: black
-    background-color: orange
+    background-color: rgba(255, 165, 0, .7)
 
     h1  
         font-size: 80px
@@ -47,9 +48,15 @@ section
         text-align: center
         font-size: 100px
 
+.players
+    margin-top: -65px
+
 .player
+    float: left
+    height: auto
     text-align: left
     font-size: 25px
+    margin: 20px 0px 20px 50px
 
     h1  
         font-size: 60px
