--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ header {
   grid-template-areas: "logo nav login";
   color: white;
   padding: 5px;
+  background-color: rgba(255, 165, 0, 0.7);
 }
 header h1 {
   grid-area: logo;
@@ -30,9 +31,7 @@ header h1 a {
 }
 header nav {
   grid-area: nav;
-
   font-size: 25px;
-
 }
 header aside {
   grid-area: login;
@@ -105,6 +104,7 @@ nav li a:hover {
 
 .s1 {
   grid-area: section1;
+  color: white;
 }
 
 .container {
@@ -116,6 +116,10 @@ nav li a:hover {
   grid-template-rows: minmax(min-content, max-content);
   grid-template-columns: 1fr;
   grid-template-areas: "header" "section1" "footer";
+}
+
+input {
+  color: black;
 }
 
 @media only screen and (max-width: 600px) {
