--- a/css/style.sass
+++ b/css/style.sass
@@ -105,6 +105,9 @@ nav
     grid-template-columns: 1fr
     grid-template-areas:    "header""section1""footer"
 
+input
+    color: black
+
 @media only screen and (max-width : 600px)
     body 
         margin: 0
