--- a/css/style.sass
+++ b/css/style.sass
@@ -2,7 +2,6 @@
 *
     box-sizing: border-box
     color: white
-    border: 1px solid red
 
 
 body
@@ -38,7 +37,6 @@ header
 section
     min-height: 650px
     padding: 5px
-    text-color: black
     background-color: rgba(255, 165, 0, .7)
 
     h1  
@@ -105,8 +103,12 @@ nav
     grid-template-columns: 1fr
     grid-template-areas:    "header""section1""footer"
 
-input
-    color: black
+form
+    div
+        label
+            color: black
+        input, select, textarea
+            color: black
 
 @media only screen and (max-width : 600px)
     body 
