--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ header {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   grid-template-rows: 200px;
-  grid-template-areas: "logo nav login";
+  grid-template-areas: "logo nav nav";
   color: white;
   padding: 5px;
   background-color: rgba(255, 165, 0, 0.7);
@@ -31,9 +31,13 @@ header h1 a {
 header nav {
   grid-area: nav;
   font-size: 25px;
+  margin-top: 50px;
 }
-header aside {
-  grid-area: login;
+header nav ul {
+  float: right;
+}
+header nav li {
+  display: inline;
 }
 header img {
   max-height: 200px;
@@ -73,9 +77,16 @@ aside {
 }
 
 footer {
-  background-color: magenta;
+  background-color: lightgray;
   padding: 5px;
   grid-area: footer;
+}
+footer .tag {
+  width: 100px;
+  margin: 0 auto;
+}
+footer * {
+  color: black;
 }
 
 nav ul {
@@ -114,6 +125,11 @@ nav li a:hover {
   grid-template-rows: minmax(min-content, max-content);
   grid-template-columns: 1fr;
   grid-template-areas: "header" "section1" "footer";
+}
+
+.userList {
+  width: 33%;
+  margin: 0 auto;
 }
 
 form div label {
