--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: white;
-  border: 1px solid red;
+  /*border: 1px solid red */
 }
 
 body {
@@ -46,12 +46,12 @@ section {
   padding: 5px;
   text-color: black;
   background-color: rgba(255, 165, 0, 0.7);
+  text-align: center;
 }
 section h1 {
   font-size: 80px;
 }
 section .motto {
-  text-align: center;
   font-size: 100px;
 }
 
@@ -68,6 +68,14 @@ section .motto {
 }
 .player h1 {
   font-size: 60px;
+}
+
+p {
+  font-size: 25px;
+}
+
+.intro {
+  margin-top: -50px;
 }
 
 aside {
