--- a/css/style.sass
+++ b/css/style.sass
@@ -2,7 +2,7 @@
 *
     box-sizing: border-box
     color: white
-    border: 1px solid red
+    /*border: 1px solid red*/
 
 
 body
@@ -40,12 +40,12 @@ section
     padding: 5px
     text-color: black
     background-color: rgba(255, 165, 0, .7)
+    text-align: center
 
     h1  
-        font-size: 80px
+        font-size: 80px  
 
     .motto
-        text-align: center
         font-size: 100px
 
 .players
@@ -60,8 +60,11 @@ section
 
     h1  
         font-size: 60px
-    
+p 
+    font-size: 25px
 
+.intro 
+    margin-top: -50px
 aside
     padding: 5px
 
