--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,17 @@ body {
   background-size: 100%;
 }
 
+.container {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
+  grid-template-rows: minmax(min-content, max-content);
+  grid-template-columns: 1fr;
+  grid-template-areas: "header" "section1" "footer";
+}
+
 header {
   width: 100%;
   grid-area: header;
@@ -109,6 +120,7 @@ nav li {
 }
 nav li a {
   display: block;
+  color: #000000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -123,17 +135,6 @@ nav li a:hover {
   color: white;
 }
 
-.container {
-  height: 100%;
-  width: 100%;
-  margin: 0 auto;
-  display: grid;
-  grid-template-rows: minmax(-webkit-min-content, -webkit-max-content);
-  grid-template-rows: minmax(min-content, max-content);
-  grid-template-columns: 1fr;
-  grid-template-areas: "header" "section1" "footer";
-}
-
 .userList {
   width: 33%;
   margin: 0 auto;
@@ -144,6 +145,36 @@ form div label {
 }
 form div input, form div select, form div textarea {
   color: black;
+}
+
+.eventItem {
+  border: 1px solid red;
+  border-radius: 25px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-areas: "eventType eventPlace eventTime" "desc desc desc";
+  margin-bottom: 5px;
+}
+
+.event0 {
+  display: none;
+}
+
+.event1 {
+  grid-area: eventType;
+}
+
+.event2 {
+  grid-area: desc;
+}
+
+.event3 {
+  grid-area: eventPlace;
+}
+
+.event4 {
+  grid-area: eventTime;
 }
 
 @media only screen and (max-width: 600px) {
