--- a/css/style.css
+++ b/css/style.css
@@ -30,24 +30,35 @@ header {
   padding: 5px;
   background-color: rgba(255, 165, 0, 0.7);
 }
-header h1 {
-  grid-area: logo;
-}
-header h1 a {
-  color: white;
-  text-decoration: none;
-  font-size: 20px;
-}
 header nav {
   grid-area: nav;
   font-size: 25px;
   margin-top: 50px;
+  float: left;
 }
 header nav ul {
-  float: right;
+  list-style-type: none;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  padding: 5px;
 }
 header nav li {
+  float: left;
   display: inline;
+}
+header nav li a {
+  display: block;
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 20px;
+}
+header nav li a:hover {
+  background-color: #555;
+  color: white;
 }
 header img {
   max-height: 200px;
@@ -105,29 +116,6 @@ footer .tag {
 }
 footer * {
   color: black;
-}
-
-nav ul {
-  list-style-type: none;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  padding: 5px;
-}
-nav li {
-  float: left;
-}
-nav li a {
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-nav li a:hover {
-  background-color: #555;
-  color: white;
 }
 
 .s1 {
