--- a/css/style.sass
+++ b/css/style.sass
@@ -75,6 +75,20 @@ section
     .motto
         font-size: 100px
 
+.gallery
+    max-width: 760px
+    margin: auto
+    border: white solid 3px
+    background: white
+
+.main-img img, .images img
+    width: 100%
+
+.images
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    grid-gap: 5px
+
 .players
     margin-top: -65px
 
