--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,23 @@ section .motto {
   grid-gap: 5px;
 }
 
+@-webkit-keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  to {
+    opacity: 1;
+  }
+}
+.fade-in {
+  opacity: 0;
+  -webkit-animation: fadeIn 0.5s ease-in 1 forwards;
+          animation: fadeIn 0.5s ease-in 1 forwards;
+}
+
 .players {
   margin-top: -65px;
 }
