--- a/css/style.css
+++ b/css/style.css
@@ -173,9 +173,9 @@ form div input, form div select, form div textarea {
   border: 1px solid red;
   border-radius: 25px;
   display: grid;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 2fr 2fr 1fr 2fr;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "eventType eventPlace eventTime" "desc desc desc";
+  grid-template-areas: "eventType eventPlace eventTime" "desc desc desc" "buttons buttons buttons" "coming . notComing";
   margin-bottom: 5px;
 }
 
@@ -197,6 +197,24 @@ form div input, form div select, form div textarea {
 
 .event4 {
   grid-area: eventTime;
+}
+
+.coming {
+  grid-area: coming;
+}
+.coming ul {
+  list-style-type: none;
+}
+
+.notComing {
+  grid-area: notComing;
+}
+.notComing ul {
+  list-style-type: none;
+}
+
+.buttons {
+  grid-area: buttons;
 }
 
 @media only screen and (max-width: 600px) {
