--- a/css/style.css
+++ b/css/style.css
@@ -36,27 +36,17 @@ header nav {
   margin-top: 50px;
   float: left;
 }
-header nav ul {
-  list-style-type: none;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  padding: 5px;
-}
-header nav li {
-  float: left;
-  display: inline;
-}
-header nav li a {
+header nav a {
   display: block;
   color: #000000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 20px;
+  float: left;
+  display: inline;
 }
-header nav li a:hover {
+header nav a:hover {
   background-color: #555;
   color: white;
 }
@@ -217,6 +207,62 @@ form div input, form div select, form div textarea {
   grid-area: buttons;
 }
 
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #4CAF50;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a {
+    display: none;
+  }
+
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
+  }
+
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
 @media only screen and (max-width: 600px) {
   body {
     margin: 0;
