--- a/css/style.sass
+++ b/css/style.sass
@@ -201,28 +201,29 @@ form
     .topnav a.icon 
         float: right
         display: block
-
-
-
-@media screen and (max-width: 600px) 
     .topnav.responsive 
         position: relative
     .topnav.responsive .icon 
         position: absolute
         right: 0
         top: 0
-
     .topnav.responsive a 
         float: none
         display: block
         text-align: left
-
-
-
-@media only screen and (max-width : 600px)
     body 
         margin: 0
         width: 100%
+    header
+        width: 100%
+        grid-area: header
+        display: grid
+        grid-template-columns: 1fr 3fr 1fr
+        grid-template-rows: 200px
+        grid-template-areas: "logo nav nav"
+        color: white
+        padding: 5px
+        background-color: rgba(255, 165, 0, .7)
     
 @media only screen and (min-width : 600px)
     .container
