--- a/css/style.sass
+++ b/css/style.sass
@@ -164,13 +164,14 @@ form
     grid-template-areas: "coming notComing"
 
 .inButton
+    width: 46%
     color: #00FF00
     background: transparent
     border: 2px solid #00FF00
     border-radius: 6px
     border: none
     color: white
-    padding: 16px 32px
+    padding: 16px 19.5%
     text-align: center
     display: inline-block
     font-size: 16px
@@ -186,13 +187,14 @@ form
     background-color: #00FF00
     color: white
 .outButton
+    width: 46%
     color: #FF0000
     background: transparent
     border: 2px solid #FF0000
     border-radius: 6px
     border: none
     color: white
-    padding: 16px 23.5px
+    padding: 16px 18%
     text-align: center
     display: inline-block
     font-size: 16px
