--- a/css/style.css
+++ b/css/style.css
@@ -32,19 +32,8 @@ header {
 }
 header nav {
   grid-area: nav;
-  font-size: 25px;
-  margin-top: 50px;
+  margin-top: 20px;
   float: left;
-}
-header nav a {
-  display: block;
-  color: #000000;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 20px;
-  float: left;
-  display: inline;
 }
 header nav a:hover {
   background-color: #555;
@@ -127,7 +116,8 @@ section .motto {
 }
 
 .intro {
-  margin-top: 5px;
+  margin: 10px;
+  text-align: left;
 }
 
 aside {
@@ -166,6 +156,8 @@ form div input, form div select, form div textarea {
 
 .eventItem {
   height: auto;
+  -webkit-box-shadow: 10px 5px #a7700b;
+          box-shadow: 10px 5px #a7700b;
   background-color: rgba(215, 144, 14, 0.5);
   width: 100%;
   max-width: 500px;
@@ -340,9 +332,9 @@ form div input, form div select, form div textarea {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 10px 11px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 2em;
 }
 
 .topnav a:hover {
@@ -359,7 +351,7 @@ form div input, form div select, form div textarea {
   display: none;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
   .topnav a {
     display: none;
   }
@@ -417,5 +409,10 @@ form div input, form div select, form div textarea {
   }
   header img {
     height: 150px;
+  }
+}
+@media screen and (max-width: 765px) {
+  .topnav a {
+    font-size: 1.75em;
   }
 }
