--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 body {
   background-image: url("/project_1/app/images/background.jpg");
   background-size: 100%;
+  font-family: "Work Sans", sans-serif;
 }
 
 .container {
@@ -154,6 +155,44 @@ form div input, form div select, form div textarea {
   color: black;
 }
 
+.formBox {
+  width: 50%;
+  margin: 10px auto;
+}
+
+input[type=text], input[type=email], input[type=password], select {
+  padding: 12px 20px;
+  margin: 10px 0 8px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.formbutton {
+  min-width: 120px;
+  width: 33%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.formbutton:hover {
+  background-color: #45a049;
+}
+
+label {
+  float: left;
+  width: 100%;
+}
+
+input {
+  width: 70%;
+}
+
 .eventItem {
   height: auto;
   -webkit-box-shadow: 10px 5px #a7700b;
@@ -161,7 +200,7 @@ form div input, form div select, form div textarea {
   background-color: rgba(215, 144, 14, 0.5);
   width: 100%;
   max-width: 500px;
-  margin: 5px auto 5px auto;
+  margin: 5px auto 10px auto;
   padding: 5px;
   border: 1px solid red;
   border-radius: 25px;
@@ -169,6 +208,9 @@ form div input, form div select, form div textarea {
   grid-template-rows: repeat(4, auto);
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-areas: "eventType eventPlace eventTime" "desc desc desc" "buttons buttons buttons" "attend attend attend";
+}
+.eventItem div a {
+  text-decoration: none;
 }
 
 .attendLists {
@@ -351,7 +393,7 @@ form div input, form div select, form div textarea {
   display: none;
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 700px) {
   .topnav a {
     display: none;
   }
@@ -384,11 +426,6 @@ form div input, form div select, form div textarea {
 
   .container {
     width: 100%;
-  }
-
-  .s1 * {
-    width: 100%;
-    height: auto;
   }
 
   header {
