--- a/css/style.sass
+++ b/css/style.sass
@@ -48,8 +48,6 @@ section
     background-color: rgba(255, 165, 0, .7)
     text-align: center
 
-    h1  
-          
 
     .motto
         font-size: 100px
@@ -339,7 +337,9 @@ input
 
 @media screen and (max-width: 700px) 
 
-
+    section 
+        .motto
+                font-size: 60px
 
 
     .topnav a 
