--- a/css/style.css
+++ b/css/style.css
@@ -205,12 +205,15 @@ input {
   border: 1px solid red;
   border-radius: 25px;
   display: grid;
-  grid-template-rows: repeat(4, auto);
+  grid-template-rows: repeat(5, auto);
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas: "eventType eventPlace eventTime" "desc desc desc" "buttons buttons buttons" "attend attend attend";
+  grid-template-areas: "fulldate fulldate fulldate" "eventType desc desc " "eventTime eventTime eventPlace" "buttons buttons buttons" "attend attend attend";
 }
 .eventItem div a {
   text-decoration: none;
+}
+.eventItem .event2 *, .eventItem .event4 * {
+  float: left;
 }
 
 .attendLists {
@@ -219,6 +222,44 @@ input {
   grid-template-rows: 1fr;
   grid-template-columns: 1fr 1fr;
   grid-template-areas: "coming notComing";
+}
+
+.day {
+  margin: 0 0 0 5px;
+  float: left;
+  clear: both;
+  font-size: 2em;
+}
+
+.month {
+  margin: 0 0 0 5px;
+  float: left;
+  clear: both;
+}
+
+.daycount {
+  float: left;
+  clear: both;
+  margin: 5px;
+}
+
+.date {
+  float: left;
+  clear: both;
+}
+
+.fulldate {
+  grid-area: fulldate;
+  margin: 0 auto;
+}
+.fulldate p {
+  margin: 5px;
+}
+
+.dayAndMonth {
+  width: 100%;
+  background-image: -webkit-gradient(linear, right bottom, left top, from(rgba(255, 0, 0, 0)), color-stop(rgba(255, 0, 0, 0.25)), to(rgba(255, 0, 0, 0.8)));
+  background-image: linear-gradient(to top left, rgba(255, 0, 0, 0), rgba(255, 0, 0, 0.25), rgba(255, 0, 0, 0.8));
 }
 
 .inButton {
@@ -276,6 +317,7 @@ input {
 }
 
 .deleteButton {
+  width: 45%;
   color: #FF0000;
   background: transparent;
   border: 2px solid #FF0000;
@@ -308,9 +350,15 @@ input {
 .event1 {
   grid-area: eventType;
 }
+.event1 p {
+  margin: 5px;
+}
 
 .event2 {
   grid-area: desc;
+}
+.event2 p {
+  margin: 5px;
 }
 
 .event3 {
@@ -363,6 +411,35 @@ input {
 .buttons form {
   display: inline;
   float: center;
+}
+
+.editButton {
+  width: 45%;
+  background: transparent;
+  border: 2px solid #FF0000;
+  border-radius: 6px;
+  border: none;
+  color: white;
+  padding: 5px 5px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 0.4s;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: black;
+  border: 2px solid #FF0000;
+}
+.editButton a {
+  color: inherit;
+}
+
+.editButton:hover {
+  background-color: #FF0000;
+  color: white;
 }
 
 .topnav {
