--- a/css/style.sass
+++ b/css/style.sass
@@ -43,6 +43,7 @@ header
         width: auto
 
 section
+    width: auto
     min-height: 650px
     padding: 5px
     background-color: rgba(255, 165, 0, .7)
@@ -52,7 +53,9 @@ section
     .motto
         font-size: 100px
 
-
+    .bodyContainer 
+        border: solid 1px red
+        max-width: 920px
 
 .gallery
     max-width: 760px
@@ -82,12 +85,14 @@ section
 .players
     margin-top: 5px
     width: 100%
-
+    border: solid 1px red
+    height: auto
 
 .player
     float: left
     height: auto
     width: 40%
+    border: solid 1px red
 
     text-align: left
     h1 
