--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ header img {
 }
 
 section {
+  width: auto;
   min-height: 650px;
   padding: 5px;
   background-color: rgba(255, 165, 0, 0.7);
@@ -53,6 +54,10 @@ section {
 }
 section .motto {
   font-size: 100px;
+}
+section .bodyContainer {
+  border: solid 1px red;
+  max-width: 920px;
 }
 
 .gallery {
@@ -96,12 +101,15 @@ section .motto {
 .players {
   margin-top: 5px;
   width: 100%;
+  border: solid 1px red;
+  height: auto;
 }
 
 .player {
   float: left;
   height: auto;
   width: 40%;
+  border: solid 1px red;
   text-align: left;
   margin: 0 3% 0 3%;
 }
